[package]
name = "interval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-timer = "0.2.5"
pin-project = "1.0.10"
futures = "0.3.21"
futures-timer = "3.0.2"
instant = "0.1.12"

[profile.release]
debug = true
